Updated Dockerfile and helm charts

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -13,19 +13,24 @@
 # limitations under the License.
 
 # https://mcr.microsoft.com/v2/dotnet/sdk/tags/list
-FROM mcr.microsoft.com/dotnet/sdk:6.0.200 as builder
-WORKDIR /app
-COPY cartservice.csproj .
-RUN dotnet restore cartservice.csproj -r linux-musl-x64
-COPY . .
-RUN dotnet publish cartservice.csproj -p:PublishSingleFile=true -r linux-musl-x64 --self-contained true -p:PublishTrimmed=True -p:TrimMode=Link -c release -o /cartservice --no-restore
+# FROM mcr.microsoft.com/dotnet/sdk:6.0.200 as builder
+FROM registry.access.redhat.com/ubi8/dotnet-50:5.0-34 as builder
+WORKDIR /opt/app-root/src
+COPY --chown=default:root cartservice.csproj .
+RUN dotnet restore cartservice.csproj -r linux-musl-x64 --disable-parallel
+COPY --chown=default:root . .
+RUN dotnet publish cartservice.csproj -p:PublishSingleFile=true -r linux-musl-x64 --self-contained true -p:PublishTrimmed=True -p:TrimMode=Link -c release -o cartservice --no-restore
+USER root
+RUN yum install -y dos2unix
+RUN dos2unix cartservice
 
 # https://mcr.microsoft.com/v2/dotnet/runtime-deps/tags/list
-FROM mcr.microsoft.com/dotnet/runtime-deps:6.0.2-alpine3.14-amd64
-RUN GRPC_HEALTH_PROBE_VERSION=v0.4.6 && \
-    wget -qO/bin/grpc_health_probe https://github.com/grpc-ecosystem/grpc-health-probe/releases/download/${GRPC_HEALTH_PROBE_VERSION}/grpc_health_probe-linux-amd64 && \
-    chmod +x /bin/grpc_health_probe
-WORKDIR /app
-COPY --from=builder /cartservice .
+FROM registry.access.redhat.com/ubi8/dotnet-50:5.0-34
+WORKDIR /opt/app-root/src
+COPY --chown=default:root --from=builder /opt/app-root/src/cartservice .
 ENV ASPNETCORE_URLS http://*:7070
-ENTRYPOINT ["/app/cartservice"]
+# ENTRYPOINT ["/opt/app-root/src/cartservice"]
+USER root
+RUN yum install -y dos2unix
+RUN dos2unix cartservice
+CMD ["/bin/bash"]
