--- a/chart/base/values.yaml
+++ b/chart/base/values.yaml
@@ -49,7 +49,7 @@ partOf: inventory
 connectsTo:
   - inventory-management-svc-solution
 
-runtime: nodejs
+runtime: dotnet
 
 serviceMesh:
   sidecar: true
