--- a/redis.yaml
+++ b/redis.yaml
@@ -27,7 +27,7 @@ spec:
     spec:
       containers:
       - name: redis
-        image: redis:alpine
+        image: quay.io/centos7/redis-5-centos7:latest
         ports:
         - containerPort: 6379
         readinessProbe:
