--- a/chart/base/templates/service.yaml
+++ b/chart/base/templates/service.yaml
@@ -19,8 +19,9 @@ spec:
   selector:
     app.kubernetes.io/name: {{ include "starter-kit.name" . }}
     app.kubernetes.io/instance: {{ include "starter-kit.name" . }}
-
+{{- end -}}
 ---
+{{- if .Values.submariner.enabled -}}
 apiVersion: multicluster.x-k8s.io/v1alpha1
 kind: ServiceExport
 metadata:
