Added redis-cart to app multicloud-demo

--- a/chart/base/templates/deployment.yaml
+++ b/chart/base/templates/deployment.yaml
@@ -125,6 +125,7 @@ spec:
     metadata:
       labels:
         app: redis-cart
+        app.kubernetes.io/part-of: {{ .Values.partOf }}
     spec:
       containers:
       - name: redis
